# Git-AST-Search

./: Cargo.toml  README.md  README_ENG.md  code_exploration.md
src/: main.rs
src/commands/: autocomplete.rs  executor.rs  mod.rs  parser.rs  registry.rs
src/commands/commands/: export.rs  mod.rs  search.rs
src/engine/: mod.rs
src/languages/: detector.rs  mod.rs  patterns.rs  registry.rs
src/modules/: bookmark.rs  chat_entry.rs  config.rs  filter.rs  mod.rs  search_result.rs  session.rs
src/navigation/: mod.rs  modes.rs
src/ui/: app.rs  events.rs  layout.rs  mod.rs  render.rs
src/ui/components/: help_overlay.rs  mod.rs  results_grid.rs  search_bar.rs  sidebar.rs  status_bar.rs
